--- a/templates/components/primary-attributes.hbs
+++ b/templates/components/primary-attributes.hbs
@@ -1,7 +1,5 @@
 <div class="attribute-container">
-    <h2 id="attributes-header">
-        <div>Primary Attributes</div>
-    </h2>
+    <h2 id="attributes-header">Primary Attributes</h2>
     <div class="resource-container">
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Strength">Strength</button>
