--- a/templates/limited-character-sheet.hbs
+++ b/templates/limited-character-sheet.hbs
@@ -21,7 +21,7 @@
             </div>
         </div>
         <section class="sheet-body">
-            {{> "systems/afmbe-jesuisfrog/templates/components/biography.hbs"}}
+            {{> systems/afmbe-jesuisfrog/templates/components/biography.hbs limited="true"}}
         </section>
     </div>
 </form>
