--- a/templates/components/biography.hbs
+++ b/templates/components/biography.hbs
@@ -1,4 +1,4 @@
-<div class="bio-container">
+<div class="bio-container" limited="{{limited}}">
     <h2>Description</h2>
     {{editor actor.system.biography target="system.biography" button=true owner=owner
     editable=editable}}
