--- a/templates/components/aspects.hbs
+++ b/templates/components/aspects.hbs
@@ -1,7 +1,7 @@
 <div class="aspects-container">
     <h2 id="aspect-header" class="header-with-button">
         <button type="button" class="create-item" data-create="aspect">+</button>
-        <span>Aspects</span>
+        <span>Aspects - [{{this.actor.system.power}}]</span>
     </h2>
     <table class="item-table">
         <thead>
