--- a/templates/components/primary-attributes.hbs
+++ b/templates/components/primary-attributes.hbs
@@ -4,37 +4,43 @@
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Strength">Strength</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.strength.value" value="{{actor.system.strength.value}}">
+                <input type="number" name="system.primaryAttributes.strength.value"
+                    value="{{actor.system.primaryAttributes.strength.value}}">
             </div>
         </div>
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Dexterity">Dexterity</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.dexterity.value" value="{{actor.system.dexterity.value}}">
+                <input type="number" name="system.primaryAttributes.dexterity.value"
+                    value="{{actor.system.primaryAttributes.dexterity.value}}">
             </div>
         </div>
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Constitution">Constitution</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.constitution.value" value="{{actor.system.constitution.value}}">
+                <input type="number" name="system.primaryAttributes.constitution.value"
+                    value="{{actor.system.primaryAttributes.constitution.value}}">
             </div>
         </div>
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Intelligence">Intelligence</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.intelligence.value" value="{{actor.system.intelligence.value}}">
+                <input type="number" name="system.primaryAttributes.intelligence.value"
+                    value="{{actor.system.primaryAttributes.intelligence.value}}">
             </div>
         </div>
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Perception">Perception</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.perception.value" value="{{actor.system.perception.value}}">
+                <input type="number" name="system.primaryAttributes.perception.value"
+                    value="{{actor.system.primaryAttributes.perception.value}}">
             </div>
         </div>
         <div class="resource">
             <button class="attribute-roll" type="button" data-attribute-name="Willpower">Willpower</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.willpower.value" value="{{actor.system.willpower.value}}">
+                <input type="number" name="system.primaryAttributes.willpower.value"
+                    value="{{actor.system.primaryAttributes.willpower.value}}">
             </div>
         </div>
     </div>
