--- a/templates/components/vehicle-attributes.hbs
+++ b/templates/components/vehicle-attributes.hbs
@@ -12,7 +12,8 @@
         <div class="resource">
             <button type="button" class="no-focus">Speed</button>
             <div class="resource-values attribute">
-                <input type="number" name="system.speed" value="{{actor.system.speed}}">
+                <input type="number" name="system.speed"
+                    value="{{actor.system.speed}}">
             </div>
         </div>
         <div class="resource">
