--- a/templates/drawback-sheet.hbs
+++ b/templates/drawback-sheet.hbs
@@ -5,7 +5,7 @@
 
     <section>
         <div class="description-container">
-            {{> "systems/afmbe-jesuisfrog/templates/components/item-attribute-sidebar.hbs"}}
+            {{> "systems/afmbe-jesuisfrog/templates/components/item-attribute-sidebar.hbs" notAspect=true}}
             {{> "systems/afmbe-jesuisfrog/templates/components/item-description-sidebar.hbs"}}
         </div>
     </section>
